<resources>
    <string name="app_name">TourGuide</string>
    <string name="kanheri">Kanheri</string>
    <string name="juhu">Juhu Beach</string>
    <string name="ajanta">Ajanta Caves</string>
    <string name="gateway">Gateway Of India</string>
    <string name="haji_ali">Haji Ali</string>
    <string name="taodba">Tadoba National Reserve</string>
    <string name="raigad">Raigad Fort</string>
    <string name="kalsubai">Kalsubai Fort</string>
    <string name="hanging">Hanging Gardens</string>
    <string name="diet">Basic Diet</string>
    <string name="ganeh">Ganeshotsava</string>
    <string name="tam">Tamasha</string>
    <string name="tadoba">Tadoba National Park</string>
    <string name="media">Media Outlets</string>
    <string name="pav_bhaji">Pav Bhaji</string>
    <string name="vada">Vada Pav</string>
    <string name="jw_cafe">JW Cafe</string>
    <string name="ober">The Oberoi Trident</string>
    <string name="lel">The Leela</string>
    <string name="the_hyatt">Hyatt Regency</string>
    <string name="renaissance">THe Renaissance</string>
    <string name="taj_hotel">Taj Hotel</string>
    <string name="shirdi">Shirdi Temple</string>
    <string name="trim">Trimbakeshwar Temple</string>
    <string name="siddhi">Siddhivinayak Temple</string>
    <string name="pule">Ganpatipule Temple</string>
    <string name="shani">Shani Shingnapur Temple</string>
    <string name="bhima">BhimaShankar Temple</string>
    <string name="holder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="holder_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="ph">+91 9022983935</string>
    <string name="num">phone number</string>
    <string name="things">Things To Do :-</string>
    <string name="about">About :-</string>
    <string name="cuisine">CUISINE</string>
    <string name="marquee">Launching our newest offers on multi-day tris to one of the greatest destination on planet Earth</string>
    <string name="place">Kanheri Caves</string>
    <string name="info_juhu">https://en.wikipedia.org/wiki/Juhu</string>
    <string name="info_ajanta">https://whc.unesco.org/en/list/242</string>
    <string name="info_gateway">https://www.culturalindia.net/monuments/gateway-of-india.html</string>
    <string name="info_haji">http://hajialidargah.in/</string>
    <string name="info_hanging">https://en.wikipedia.org/wiki/Hanging_Gardens_of_Mumbai</string>
    <string name="info_kalsu">https://en.wikipedia.org/wiki/Kalsubai</string>
    <string name="info_tadoba">https://tadobanationalpark.in</string>
    <string name="info_jw">https://www.zomato.com/mumbai/jw-caf%C3%A9-jw-marriott-mumbai-sahar-chakala</string>
    <string name="info_oberoi">https://twitter.com/OberoiHotels</string>
    <string name="info_leela">https://twitter.com/TheLeelaHotels</string>
    <string name="info_hyatt">https://twitter.com/hyattregency</string>
    <string name="info_rena">https://twitter.com/RenaissanceMum</string>
    <string name="info_taj">https://twitter.com/TajHotels</string>
    <string name="name">name</string>
    <string name="img">img</string>
    <string name="score">score</string>
    <string name="var">var</string>
    <string name="title">What\'s NEW ????</string>
    <string name="tool">Now book your tickets and get on With your bucket list with our one click MMT integration tool</string>
    <string name="mmt">http://www.makemytrip.com/travel-guide/mumbai/places-to-visit.html</string>
    <string name="attractions">Attractions</string>
    <string name="trmples">Temples</string>
    <string name="restaurants">Restaurants</string>
    <string name="nat">Native</string>
    <string name="maps">http://maps.google.co.in/maps?q=</string>
    <string name="package_name">com.google.android.apps.maps</string>
    <string name="class_name">com.google.android.maps.MapsActivity</string>
    <string name="bluish">#074E72</string>
    <string name="welcome">Welcome to Maharashtra !!!</string>
    <string name="credit">Made in 2018, by theAustin316</string>
    <string name="subtitle">Kasa kai public ????</string>
    <string name="toast">Long Press to get directions to your desired location</string>
    <string name="image">Image</string>
</resources>
