<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_Bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/tool_ht"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/collap_img"
                android:layout_width="match_parent"
                android:layout_height="@dimen/tool_ht"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/gate"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="Maharashtra Tourism" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blugre"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/backish"
            app:cardCornerRadius="@dimen/corner_rad"
            android:layout_margin="@dimen/card_margin"
            app:cardElevation="@dimen/card_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_elevation"
                android:textColor="@color/blugre"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                tools:text="@string/about" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_elevation"
                android:text="@string/holder"
                android:textColor="@color/white"
                android:textSize="@dimen/text" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_elevation"
                android:text="@string/things"
                android:textColor="@color/blugre"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_elevation"
                android:text="@string/holder_text"
                android:textColor="@color/white"
                android:textSize="@dimen/text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:contentDescription="@string/num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin"
                    android:src="@drawable/phone" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/mg_top"
                    android:autoLink="phone"
                    android:textSize="@dimen/text_size"
                    android:text="@string/ph" />

            </LinearLayout>

        </LinearLayout>
        </android.support.v7.widget.CardView>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:elevation="@dimen/elevation"
        app:rippleColor="@color/backish"
        app:backgroundTint="@color/blugre"
        app:fabSize="normal"
        android:scaleType="fitXY"
        android:src="@drawable/social"
        app:pressedTranslationZ="@dimen/card_elevation"
        app:layout_anchor="@id/app_Bar"
        app:layout_anchorGravity="bottom|right"
        android:layout_marginRight="@dimen/fab_margin"/>

</android.support.design.widget.CoordinatorLayout>